# ferrite

./: .gitignore  Cargo.toml  Makefile  README.md  boot.asm  kernel.asm  linkder.ld  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: book.toml
docs/en/: book.toml
docs/en/src/: README.md  SUMMARY.md
docs/en/src/architecture/: compiling.md
docs/en/src/developers/: sources.md
docs/fr/: book.toml
docs/fr/src/: README.md  SUMMARY.md
docs/fr/src/cpu/: gdt.md
docs/fr/src/developers/: building.md  sources.md
docs/fr/src/project/: kfs_01.md  kfs_02.md  kfs_03.md  overview.md
docs/nl/: book.toml
docs/nl/src/: SUMMARY.md
docs/src/: SUMMARY.md
docs/src/boot/: sequence.md
docs/src/cpu/: gdt.md
docs/src/developers/: sources.md
src/arch/i386/: boot.asm  crti.asm  crtn.asm  tty.c
src/arch/x86/: boot.asm  gdt.asm  memcmp.asm  memcpy.asm  memset.asm  paging.asm  test_gdt.asm  x86.json  x86.ld
src/kernel/: Cargo.toml  Makefile  grub.cfg  kernel.c  main.rs  runner.sh
src/kernel/arch/: mod.rs
src/kernel/arch/x86/: boot.rs  gdt.rs  io.rs  mod.rs  target.rs
src/kernel/arch/x86/cpu/: control.rs  reset.rs
src/kernel/arch/x86/diagnostics/: cpu.rs
src/kernel/device/: keyboard.rs
src/kernel/include/kernel/: tty.h
src/kernel/libc/: mod.rs  print.rs
src/kernel/libc/console/: console.rs  mod.rs
src/kernel/macros/: colour.rs  mod.rs
src/kernel/src/: bin.rs  build.rs  kernel.rs  panic.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/x86/: boot.rs  exceptions.rs  gdt.rs  idt.rs  io.rs  memory.rs  mod.rs  multiboot.rs  paging.rs  pic.rs  pid.rs
src/kernel/src/arch/x86/cpu/: control.rs  mod.rs
src/kernel/src/arch/x86/diagnostics/: cpu.rs
src/kernel/src/collections/: intrusive_linked_list.rs  linked_list.rs  mod.rs
src/kernel/src/device/: keyboard.rs
src/kernel/src/libc/builtin/: libc.h  memcmp.c  memcpy.c  memset.c
src/kernel/src/libc/console/: console.rs  mod.rs
src/kernel/src/macros/: colour.rs  log.rs  mod.rs  print.rs  serial.rs
src/kernel/src/memory/: addr.rs  allocator.rs  buddy.rs  frame.rs  memblock.rs  mod.rs  node_pool.rs  paging.rs  region.rs  slab.rs  stack.rs  transition.rs
src/kernel/src/sync/: locked.rs  mod.rs  mutex.rs
src/kernel/src/tests/: mod.rs
src/kernel/src/tests/unit/: gdt_tests.rs  linked_list_tests.rs  mm_tests.rs  mod.rs  pic_tests.rs  tty_tests.rs
src/kernel/src/tty/: log.rs  mod.rs  serial.rs  tty.rs  vga.rs
src/kernel/tty/: tty.rs  vga.rs
src/libc/include/: stdio.h  stdlib.h  string.h
src/libc/stdlib/: abort.c
src/libc/string/: memccpy.c  memcmp.c  memset.c  strlen.c
src/sync/: Cargo.toml
src/sync/src/: lib.rs
