[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 3

[dependencies]
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[lib]
name = "kernel"
path = "src/kernel/main.rs"
crate-type = ["staticlib"]
