[package]
name = "fungul"
version = "0.5.3"
edition = "2021"

[dependencies]
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.1.1"
features = ["spin_no_std"]

[lib]
name = "kernel"
path = "src/kernel.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 2
debug = true
debug-assertions = true

[profile.release]
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
strip = true

