[package]
name = "fungul"
version = "0.5.3"
edition = "2021"
build = "src/build.rs"

[lib]
name = "kernel"
path = "src/kernel.rs"

[[bin]]
name = "fungul"
path = "src/bin.rs"

[dependencies]
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.1.1"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"
opt-level = 2
debug = true
debug-assertions = true

[profile.release]
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
strip = true

