[package]
name = "fungul"
version = "0.7.0"
edition = "2021"
build = "src/build.rs"

[lib]
name = "kernel"
path = "src/kernel.rs"

[[bin]]
name = "fungul"
path = "src/bin.rs"

[dependencies]
kernel_sync = { path = "../sync/" }

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[profile.dev]
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 3

